--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "luxon": "^3.4.4",
     "mongoose": "^8.1.0",
     "nodemon": "^3.0.3"
   }
